Blender Crashes With Every Mask-Slice Operators #72830

Closed
opened 2020-01-01 09:16:42 +01:00 by irex124 · 10 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-30 18:20, hash: 56ef761381
Worked: (optional)

Short description of error
Blender crashes with all 3 mask slice operators if there is no active mask.

Exact steps to reproduce the error

  1. Load up the default scene.
  2. Change the default cube into any other mesh OR leave it as it is.
  3. Don't create any mask, use any of the three mask slice operators.
  4. Blender crashes.
  • If it doesn't crash with the default cube, just remesh it and follow Step 3 from above.
  • But Blender doesn't crash at all if you : just created the mask, cleared it and then followed step 3.
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-30 18:20, hash: `56ef761381` Worked: (optional) **Short description of error** Blender crashes with all 3 mask slice operators if there is no active mask. **Exact steps to reproduce the error** 1. Load up the default scene. 2. Change the default cube into any other mesh OR leave it as it is. 3. Don't create any mask, use any of the three mask slice operators. 4. **Blender crashes.** - If it doesn't crash with the default cube, just remesh it and follow Step 3 from above. - But Blender doesn't crash at all if you : just created the mask, cleared it and then followed step 3.
Author

Added subscriber: @Pasang

Added subscriber: @Pasang

Added subscriber: @ronsn

Added subscriber: @ronsn

I can confirm that for the Linux build, but the steps are a little bit different:
render_0041-2109.mp4

––––––––––––––––––

System Information
Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-30 18:20, hash: 56ef761381

I can confirm that for the Linux build, but the steps are a little bit different: [render_0041-2109.mp4](https://archive.blender.org/developer/F8254855/render_0041-2109.mp4) –––––––––––––––––– **System Information** Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-30 18:20, hash: `56ef761381`

Added subscriber: @Regnas

Added subscriber: @Regnas

Yea, I can confirm as well.

Yea, I can confirm as well.
Member

Added subscribers: @PabloDobarro, @lichtwerk

Added subscribers: @PabloDobarro, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can also confirm from @ronsn repro steps

already asserts because mask custom data layer is not found:

BLI_assert failed: /blender/source/blender/editors/mesh/editmesh_mask_extract.c:292, slice_paint_mask(), at 'cd_vert_mask_offset != -1'

CC @PabloDobarro

Can also confirm from @ronsn repro steps already asserts because mask custom data layer is not found: ``` BLI_assert failed: /blender/source/blender/editors/mesh/editmesh_mask_extract.c:292, slice_paint_mask(), at 'cd_vert_mask_offset != -1' ``` CC @PabloDobarro

This issue was referenced by bc9c8c35e1

This issue was referenced by bc9c8c35e17428f3697664274bc54e9c294453c5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-01-07 16:59:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72830
No description provided.